[gd_scene load_steps=3 format=3 uid="uid://d0jqenqcmoa50"]

[ext_resource type="Script" path="res://addons/ChangeDiscard/ChangeDiscard.gd" id="1_jm1nc"]

[sub_resource type="GDScript" id="GDScript_62qq1"]
resource_name = "detecteddemo"
script/source = "extends Node


@export var changediscard : Node


func _process(_delta: float) -> void:
	if changediscard.change_flag:
		$changesdetectedlabel.text = str(\"%s change%s detected!\" % [changediscard.number_of_changes, (\"s\" if changediscard.number_of_changes > 1 else \"\")])
		$discard.disabled = false
		$save.disabled = false
	else:
		$changesdetectedlabel.text = \"No changes...\"
		$discard.disabled = true
		$save.disabled = true


func _on_discard_pressed() -> void:
	changediscard.discard_changes()
	pass # Replace with function body.


func _on_save_pressed() -> void:
	changediscard.set_changes()
	changediscard.save_changes_to_file()
	pass # Replace with function body.
"

[node name="Example" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChangeDiscard" type="Node" parent="."]
script = ExtResource("1_jm1nc")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 224.0
offset_bottom = 60.0
text = "Example scene.
Try changing some of these settings around in-game."

[node name="CheckButton" type="CheckButton" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 80.0
offset_right = 275.0
offset_bottom = 111.0
text = "Game Crash On Start"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 392.0
offset_top = 104.0
offset_right = 704.0
offset_bottom = 336.0
text = "A bunch of text to change.
You can change anything.
The only limit is yourself."
placeholder_text = "type something..."

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 128.0
offset_right = 304.0
offset_bottom = 159.0
text = "line edit this line"

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 192.0
offset_right = 320.0
offset_bottom = 256.0
color = Color(1, 0, 0, 1)

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 48.0
offset_top = 280.0
offset_right = 312.0
offset_bottom = 296.0
value = 16.0

[node name="VSlider" type="VSlider" parent="."]
layout_mode = 0
offset_left = 328.0
offset_top = 80.0
offset_right = 344.0
offset_bottom = 312.0
value = 66.0

[node name="OptionButton" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 320.0
offset_right = 288.0
offset_bottom = 384.0
item_count = 3
selected = 0
popup/item_0/text = "Detonate"
popup/item_0/id = 0
popup/item_1/text = "Explode"
popup/item_1/id = 1
popup/item_2/text = "Combust"
popup/item_2/id = 2

[node name="Feedback" type="Node" parent="." node_paths=PackedStringArray("changediscard")]
script = SubResource("GDScript_62qq1")
changediscard = NodePath("../ChangeDiscard")

[node name="changesdetectedlabel" type="Label" parent="Feedback"]
offset_left = 88.0
offset_top = 448.0
offset_right = 255.0
offset_bottom = 474.0
text = "No Changes Detected"

[node name="discard" type="Button" parent="Feedback"]
offset_left = 64.0
offset_top = 480.0
offset_right = 256.0
offset_bottom = 512.0
text = "Discard Changes"

[node name="save" type="Button" parent="Feedback"]
offset_left = 64.0
offset_top = 520.0
offset_right = 256.0
offset_bottom = 552.0
text = "Save Changes"

[connection signal="toggled" from="CheckButton" to="ChangeDiscard" method="track_change" binds= ["../CheckButton"]]
[connection signal="text_changed" from="TextEdit" to="ChangeDiscard" method="track_change_text" binds= ["../TextEdit"]]
[connection signal="text_changed" from="LineEdit" to="ChangeDiscard" method="track_change" binds= ["../LineEdit"]]
[connection signal="color_changed" from="ColorPickerButton" to="ChangeDiscard" method="track_change" binds= ["../ColorPickerButton"]]
[connection signal="value_changed" from="HSlider" to="ChangeDiscard" method="track_change" binds= ["../HSlider"]]
[connection signal="value_changed" from="VSlider" to="ChangeDiscard" method="track_change" binds= ["../VSlider"]]
[connection signal="item_selected" from="OptionButton" to="ChangeDiscard" method="track_change" binds= ["../OptionButton"]]
[connection signal="pressed" from="Feedback/discard" to="Feedback" method="_on_discard_pressed" binds= [""]]
[connection signal="pressed" from="Feedback/save" to="Feedback" method="_on_save_pressed"]
